Simplify CORS configuration